# dmipy

./: .gitignore  pyproject.toml
dmipy/: __init__.py
dmipy/core/: modeling_framework.py
doc/: conf.py
tests/: test_noddi.py
